# JupyterKernel4Pyodide

./: README.md  kernel.json  pyodide-kernel.js  pyproject.toml  testPyodideKernel.html
.ipynb_checkpoints/: testPyodideKernel-checkpoint.html
simplepyodidekernel/: SimplePyodideKernel.py  utils.py
